add class to the body to affect the background colorof it

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="dark-mode">
         
         <div class="switch">
-            <h2>Dark Mode</h2>
+            <h2 class="dark-title">Dark Mode</h2>
             <input type="checkbox" id="check" class="toggle">
             <label for="check" class="button"></label>
             
@@ -52,5 +52,6 @@
     </div>
     <div class="main"></div>
     <div class="footer"></div>
+    <script src="javascript.js"></script>
 </body>
 </html>
